[TEST] API Test for Get Deleted Clothes, Get Clothes Detail By Id, [BE] API Get Clothes Detail By Id
