# wardrobe/app/Http/Controllers/Api/ClothesApi/Queries.php
@@ -94,9 +94,13 @@ class Queries extends Controller
         try{
             $user_id = $request->user()->id;
 
-            $res = ClothesModel::select('id', 'clothes_name', 'clothes_size', 'clothes_gender', 'clothes_color', 'clothes_category', 'clothes_type', 'clothes_qty', 'is_faded', 'has_washed', 'has_ironed', 'is_favorite', 'is_scheduled')
-                ->where('clothes_category',$category)
-                ->where('created_by',$user_id)
+            $res = ClothesModel::select('id', 'clothes_name', 'clothes_size', 'clothes_gender', 'clothes_color', 'clothes_category', 'clothes_type', 'clothes_qty', 'is_faded', 'has_washed', 'has_ironed', 'is_favorite', 'is_scheduled');
+            
+            if($category != "all"){
+                $res->where('clothes_category',$category);
+            }
+            
+            $res = $res->where('created_by',$user_id)
                 ->orderBy('is_favorite', 'desc')
                 ->orderBy('clothes_name', $order)
                 ->orderBy('created_at', $order)
@@ -577,6 +581,147 @@ class Queries extends Controller
                         'data' => false
                     ], Response::HTTP_OK);
                 }
+            } else {
+                return response()->json([
+                    'status' => 'failed',
+                    'message' => Generator::getMessageTemplate("not_found", "clothes"),
+                ], Response::HTTP_NOT_FOUND);
+            }
+        } catch(\Exception $e) {
+            return response()->json([
+                'status' => 'error',
+                'message' => Generator::getMessageTemplate("unknown_error", null),
+            ], Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    /**
+     * @OA\GET(
+     *     path="/api/v1/clothes/detail/{clothes_id}",
+     *     summary="Show clothes detail by clothes id",
+     *     tags={"Clothes"},
+     *     @OA\Parameter(
+     *         name="clothes_id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="string"),
+     *         description="clothes id",
+     *         example="e1288783-a5d4-1c4c-2cd6-0e92f7cc3bf9",
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Clothes found",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="status", type="string", example="success"),
+     *             @OA\Property(property="message", type="string", example="This clothes is washed right now"),
+     *             @OA\Property(property="data", type="object",
+     *                 @OA\Property(property="detail", type="object",
+     *                     @OA\Property(property="id", type="string", example="10bacb64-e819-11ed-a05b-0242ac120003"),
+     *                     @OA\Property(property="clothes_name", type="string", example="Short Sleeves Oversized"),
+     *                     @OA\Property(property="clothes_desc", type="string", example="Lorem ipsum odor amet, consectetuer adipiscing elit."),
+     *                     @OA\Property(property="clothes_merk", type="string", example="Berskha"),
+     *                     @OA\Property(property="clothes_size", type="string", example="L"),
+     *                     @OA\Property(property="clothes_gender", type="string", example="male"),
+     *                     @OA\Property(property="clothes_made_from", type="string", example="cloth"),
+     *                     @OA\Property(property="clothes_color", type="string", example="black, white"),
+     *                     @OA\Property(property="clothes_category", type="string", example="upper_body"),
+     *                     @OA\Property(property="clothes_type", type="string", example="shirt"),
+     *                     @OA\Property(property="clothes_price", type="integer", example=600000),
+     *                     @OA\Property(property="clothes_buy_at", type="string", example=null),
+     *                     @OA\Property(property="clothes_qty", type="integer", example=1),
+     *                     @OA\Property(property="is_faded", type="integer", example=0),
+     *                     @OA\Property(property="has_washed", type="integer", example=1),
+     *                     @OA\Property(property="has_ironed", type="integer", example=1),
+     *                     @OA\Property(property="is_favorite", type="integer", example=1),
+     *                     @OA\Property(property="is_scheduled", type="integer", example=0),
+     *                     @OA\Property(property="created_at", type="string", example="2024-04-10 22:10:56"),
+     *                     @OA\Property(property="created_by", type="string", example="2d98f524-de02-11ed-b5ea-0242ac120002"),
+     *                     @OA\Property(property="updated_at", type="string", example="2d98f524-de02-11ed-b5ea-0242ac120002"),
+     *                     @OA\Property(property="deleted_at", type="string", example="2d98f524-de02-11ed-b5ea-0242ac120002")
+     *                 ),
+     *                 @OA\Property(property="used_history", type="array",
+     *                     @OA\Items(type="object",
+     *                         @OA\Property(property="id", type="string", example="1d7a826d-4898-c7a4-3b67-e3a01819a55c"),
+     *                         @OA\Property(property="clothes_note", type="string", nullable=true, example=null),
+     *                         @OA\Property(property="used_context", type="string", example="Shopping"),
+     *                         @OA\Property(property="created_at", type="string", example="2024-05-14 02:32:07")
+     *                     )
+     *                 ),
+     *                 @OA\Property(property="wash_history", type="array",
+     *                     @OA\Items(type="object",
+     *                         @OA\Property(property="wash_note", type="string", nullable=true, example=null),
+     *                         @OA\Property(property="wash_type", type="string", example="Laundry"),
+     *                         @OA\Property(property="wash_checkpoint", type="array",
+     *                             @OA\Items(type="object",
+     *                                 @OA\Property(property="id", type="string", example="1"),
+     *                                 @OA\Property(property="checkpoint_name", type="string", example="Rendam"),
+     *                                 @OA\Property(property="is_finished", type="boolean", example=false)
+     *                             )
+     *                         ),
+     *                         @OA\Property(property="created_at", type="string", example="2024-05-17 04:09:40"),
+     *                         @OA\Property(property="finished_at", type="string", nullable=true, example=null)
+     *                     )
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="protected route need to include sign in token as authorization bearer",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="failed"),
+     *             @OA\Property(property="message", type="string", example="you need to include the authorization token from login")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="clothes not found",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="failed"),
+     *             @OA\Property(property="message", type="string", example="clothes not found")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal Server Error",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="error"),
+     *             @OA\Property(property="message", type="string", example="something wrong. please contact admin")
+     *         )
+     *     ),
+     * )
+     */
+    public function get_clothes_detail_by_id(Request $request, $clothes_id)
+    {
+        try{
+            $user_id = $request->user()->id;
+
+            $res_clothes = ClothesModel::select('*')
+                ->where('id',$clothes_id)
+                ->where('created_by',$user_id)
+                ->first();
+
+            if($res_clothes){
+                $res_used = ClothesUsedModel::select('id','clothes_note','used_context','created_at')
+                    ->where('clothes_id',$clothes_id)
+                    ->where('created_by',$user_id)
+                    ->get();
+
+                $res_wash = WashModel::select('wash_note','wash_type','wash_checkpoint','created_at','finished_at')
+                    ->where('clothes_id',$clothes_id)
+                    ->where('created_by',$user_id)
+                    ->get();
+
+                return response()->json([
+                    'status' => 'success',
+                    'message' => Generator::getMessageTemplate("custom", 'This clothes is washed right now'),
+                    'data' => [
+                        'detail' => $res_clothes,
+                        'used_history' => count($res_used) > 0 ? $res_used : null,
+                        'wash_history' => count($res_wash) > 0 ? $res_wash : null
+                    ]
+                ], Response::HTTP_OK);
             } else {
                 return response()->json([
                     'status' => 'failed',
